Added isodate dependency

--- a/templates/_video_input.html
+++ b/templates/_video_input.html
@@ -1,1 +1,1 @@
-<input type="text" name="vide-url" id="video-url" class="new-video" autofocus>
+<input type="text" name="video-url" id="video-url" class="new-video" autofocus>
