--- a/templates/_video.html
+++ b/templates/_video.html
@@ -1,26 +1,26 @@
 <turbo-frame id="video-{{ video.uuid }}">
-    <li class="media">
-        <div class="media-left">
-            <a href="#">
-                <img class="media-object" src="{{ video.thumbnail_url }}">
-            </a>
-        </div>
-        <div class="media-boy">
-            <label class="media-heading">{{ video.title }}</label>
-        </div>
-        <div class="media-right">
-            <div class="btn-group" role="group">
-                <form method="POST" action="{{ url_for('force_play', uuid=video.uuid) }}">
-                    <button type="button" class="btn">
-                        <span class="glyphicon glyphicon-play"></span>
-                    </button>
-                </form>
-                <form method="POST" action="{{ url_for('delete', uuid=video.uuid) }}">
-                    <button type="button" class="btn">
-                        <span class="glyphicon glyphicon-trash"></span>
-                    </button>
-                </form>
-            </div>
-        </div>
+    <li class="list-group-item border-0">
+        <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item">
+                <img src="{{ video.thumbnail_url }}" alt="{{ video.title }}">
+            </li>
+            <li class="list-group-item d-flex flex-column justify-content-center">
+                <label>{{ video.title }}</label>
+            </li>
+            <li class="list-group-item d-flex flex-column justify-content-center">
+                <div class="btn-group" role="group">
+                    <form method="POST" action="{{ url_for('force_play', uuid=video.uuid) }}">
+                        <button type="button" class="btn">
+                            <i class="bi bi-play-fill"></i>
+                        </button>
+                    </form>
+                    <form method="POST" action="{{ url_for('delete', uuid=video.uuid) }}">
+                        <button type="button" class="btn">
+                            <i class="bi bi-trash-fill"></i>
+                        </button>
+                    </form>
+                </div>
+            </li>
+        </ul>
     </li>
 </turbo-frame>
