--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,16 @@
 <div class="youtube-playlist">
     <h1>YouTube playlist</h1>
     <turbo-frame id="all">
+        <turbo-frame id="player">
+            {% if current_video is not none %}
+                <iframe width="560" height="315" src="{{ current_video.playback_url }}" title="YouTube video player"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                </iframe>
+            {% else %}
+                <img width="560" height="315" src="https://via.placeholder.com/560x315.png?text=No+video" alt="No video">
+            {% endif %}
+        </turbo-frame>
         <form method="POST" id="input-form">
             {% include '_video_input.html' %}
         </form>
