--- a/templates/_player.html
+++ b/templates/_player.html
@@ -1,9 +1,24 @@
 <turbo-frame id="player">
     {% if current_video is not none %}
-        <iframe width="560" height="315" src="{{ current_video.playback_url }}" title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-        </iframe>
+        <video id="vid1" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto" width="560" height="315">
+            <source src="{{ current_video.playback_url }}" type="video/webm">
+        </video>
+{#        <player width="560" height="315" src="{{ current_video.playback_url }}" title="YouTube video player"#}
+{#                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"#}
+{#                allowfullscreen class="video-player">#}
+{#        </player>#}
+        <script type="text/javascript">
+            const player = videojs("vid1", null, function () {
+                this.on("ended", function () {
+                    fetch("{{ url_for('play_next') }}", {
+                        method: "POST",
+                        headers: {
+                            "Content-Type": "application/json",
+                        }
+                    })
+                })
+            });
+        </script>
     {% else %}
         <img width="560" height="315" src="https://via.placeholder.com/560x315.png?text=No+video" alt="No video">
     {% endif %}
