--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,11 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://vjs.zencdn.net/8.16.1/video.min.js"></script>
+    <link href="https://vjs.zencdn.net/8.16.1/video-js.css" rel="stylesheet" />
+    <script type="text/javascript">
+        videojs.options.autoplay = true;
+    </script>
     {{ turbo() }}
 </head>
 <body>
