--- a/templates/_video_list.html
+++ b/templates/_video_list.html
@@ -1,6 +1,35 @@
-<ol class="list-group list-group-numbered d-flex flex-column justify-content-center align-items-center"
-    id="videos">
-    {% for video in videos %}
-        {% include '_video.html' %}
-    {% endfor %}
-</ol>
+<script type="text/javascript">
+    async function play_video(video_id) {
+        console.log(video_id);
+        await fetch("/force_play/" + video_id, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            }
+        });
+        await fetch("/reload_data", {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            }
+        });
+        let response = await fetch(`/api/v1/get_current`, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json',
+            }
+        });
+        response = await response.json();
+        console.log(response);
+        let player = videojs("vid1");
+        player.src({src: response['playback_url'], type: 'video/webm'});
+        player.play();
+    }
+</script>
+<turbo-frame id="videos">
+    <ol class="list-group list-group-numbered d-flex flex-column justify-content-center align-items-center">
+        {% for video in videos %}
+            {% include '_video.html' %}
+        {% endfor %}
+    </ol>
+</turbo-frame>
