Made style better

--- a/templates/_player.html
+++ b/templates/_player.html
@@ -1,4 +1,4 @@
-<video id="vid1" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto" width="560"
+<video id="vid1" class="video-js vjs-default-skin vjs-big-play-centered mt-2" controls preload="auto" width="560"
        height="315">
     <source src="{{ current_video.playback_url }}">
 </video>
