--- a/templates/_video.html
+++ b/templates/_video.html
@@ -1,12 +1,12 @@
-<li class="list-group-item border-0 d-flex align-items-center" id="video-{{ video.id }}">
-    <ul class="list-group list-group-horizontal-sm">
-        <li class="list-group-item">
+<div class="list-group-item border-0 d-flex align-items-center w-100 h-25" id="video-{{ video.id }}" style="max-height: 25%">
+    <div class="list-group list-group-horizontal-sm flex-grow-1">
+        <div class="list-group-item">
             <img src="{{ video.thumbnail_url }}" alt="{{ video.title }}">
-        </li>
-        <li class="list-group-item d-flex flex-column justify-content-center">
+        </div>
+        <div class="list-group-item d-flex flex-column justify-content-center flex-fill">
             <label>{{ video.title }}</label>
-        </li>
-        <li class="list-group-item d-flex flex-column justify-content-center">
+        </div>
+        <div class="list-group-item d-flex flex-column justify-content-center">
             <div class="btn-group" role="group">
                 <button type="button" class="btn" onclick="play_video('{{ video.id }}');">
                     <i class="bi bi-play-fill"></i>
@@ -17,6 +17,6 @@
                     </button>
                 </form>
             </div>
-        </li>
-    </ul>
-</li>
+        </div>
+    </div>
+</div>
